--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,7 @@ a {
 
 /* -------------------------------- 
 
-Resource style 
+Slide In Panel - by CodyHouse.co
 
 -------------------------------- */
 .cd-main-content {
